--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,15 @@
       <artifactId>telegrambots-longpolling</artifactId>
       <version>9.0.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.telegram</groupId>
+      <artifactId>telegrambots-client</artifactId>
+      <version>9.0.0</version>
+    </dependency>
   </dependencies>
+
+
 
   <build>
     <plugins>
