--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ logging.level.org.telegram=WARN
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss} - %msg%n
 
 # DB configuration
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/stezhkaBot?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=admin
+spring.datasource.password=your_secure_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
@@ -27,4 +27,4 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 
 
-bot.admin.user.ids=${ADMIN_USER_IDS:}
+bot.admin.user.ids=1006790528
