--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,4 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 
 
-bot.admin.user.ids=1006790528
+bot.admin.user.ids=1006790528,1207199550
